5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1850_1278.log
== TEST (2019-07-02 10:45:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1=input("cidade 1: ")
mat= array([[0,2,11,6,15,11,1],
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13],
				[6,12,11,0,10,2,1],
				[15,4,8,10,0,5,13],
				[11,2,3,2,5,0,14],
				[1,15,13,1,13,14,0]])
t=0
i=0
j=1
while(c1!="-1"):
	if(i!=j):
		i=int(c1[0])-1
		c1=input("digitar dnv: ")
	if(c1!="-1")
		j=int(c1[0])-1
		t=t+mat[i,j]
		c1=input("digitar dnv: ")
		i=j
print(t)
-- ERROR:
File "XXXX", line 18
    if(c1!="-1")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1=input("cidade 1: ")
mat= array([[0,2,11,6,15,11,1],
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13],
				[6,12,11,0,10,2,1],
				[15,4,8,10,0,5,13],
				[11,2,3,2,5,0,14],
				[1,15,13,1,13,14,0]])
t=0
i=0
j=1
while(c1!="-1"):
	if(i!=j):
		i=int(c1[0])-1
		c1=input("digitar dnv: ")
	elif(c1!="-1")
		j=int(c1[0])-1
		t=t+mat[i,j]
		c1=input("digitar dnv: ")
		i=j
print(t)
-- ERROR:
File "XXXX", line 18
    elif(c1!="-1")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1=input("cidade 1: ")
mat= array([[0,2,11,6,15,11,1],
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13],
				[6,12,11,0,10,2,1],
				[15,4,8,10,0,5,13],
				[11,2,3,2,5,0,14],
				[1,15,13,1,13,14,0]])
t=0
i=0
j=1
while(c1!="-1"):
	if(i!=j):
		i=int(c1[0])-1
		c1=input("digitar dnv: ")
	if(c1!="-1"):
		j=int(c1[0])-1
		t=t+mat[i,j]
		c1=input("digitar dnv: ")
		i=j
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:45:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1=input("cidade 1: ")
mat= array([[0,2,11,6,15,11,1],
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13],
				[6,12,11,0,10,2,1],
				[15,4,8,10,0,5,13],
				[11,2,3,2,5,0,14],
				[1,15,13,1,13,14,0]])
t=0
i=0
j=1
while(c1!="-1"):
	if(i!=j):
		i=int(c1[0])-1
		c1=input("digitar dnv: ")
	if(c1!="-1"):
		j=int(c1[0])-1
		t=t+mat[i,j]
		c1=input("digitar dnv: ")
		i=j
print(t)
-- EXECUTION TIME:
0.868693
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
